--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -63,7 +63,7 @@
           "bundleName": "logaligroup.employees.i18n.i18n"
         }
       },
-      "": {
+      "northwindModel": {
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
@@ -106,7 +106,7 @@
       }
     },
     "rootView": {
-      "viewName": "logaligroup.employees.view.App",
+      "viewName": "logaligroup.employees.view.MainView",
       "type": "XML",
       "async": true,
       "id": "App"
