correção da dupla instanciação da vista

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -89,7 +89,7 @@
       "routes": [
         {
           "name": "RouteMainView",
-          "pattern": ":?query:",
+          "pattern": "?home",
           "target": [
             "TargetMainView"
           ]
