--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -106,7 +106,7 @@
       }
     },
     "rootView": {
-      "viewName": "logaligroup.employees.view.MainView",
+      "viewName": "logaligroup.employees.view.ListTypes",
       "type": "XML",
       "async": true,
       "id": "App"
