--- a/ui5-local.yaml
+++ b/ui5-local.yaml
@@ -33,6 +33,11 @@ server:
           - path: /V2
             url: https://services.odata.org
             destination: Northwind
+          - path: /sap
+            url: http://erp13.sap4practice.com:9037
+            client: '001'
+            destination: logaligroupERP
+            authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
