--- a/ui5.yaml
+++ b/ui5.yaml
@@ -19,6 +19,11 @@ server:
           - path: /V2
             url: https://services.odata.org
             destination: Northwind
+          - path: /sap
+            url: http://erp13.sap4practice.com:9037
+            client: '001'
+            destination: logaligroupERP
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
