--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -116,9 +116,16 @@
             "routes": [
                 {
                     "name": "RouteMainView",
-                    "pattern": "?home",
+                    "pattern": "",
                     "target": [
                         "TargetMain"
+                    ]
+                },
+                {
+                    "name": "RouteOrderDetails",
+                    "pattern": "OrderDetails/{orderID}",
+                    "target": [
+                        "TargetOrderDetails"
                     ]
                 }
             ],
@@ -130,17 +137,17 @@
                     "viewId": "Main",
                     "viewName": "Main"
                 },
-                "TargetEmployeeMaster": {
+                "TargetOrderDetails": {
                     "viewType": "XML",
                     "transition": "slide",
                     "clearControlAggregation": false,
-                    "viewId": "EmpoyeeMaster",
-                    "viewName": "EmpoyeeMaster"
+                    "viewId": "OrderDetails",
+                    "viewName": "OrderDetails"
                 }
             }
         },
         "rootView": {
-            "viewName": "logaligroup.employees.view.Main",
+            "viewName": "logaligroup.employees.view.App",
             "type": "XML",
             "async": true,
             "id": "App"
